src/zmapParser.py
# Generated from src/zmap.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class zmapParser ( Parser ):

    grammarFileName = "zmap.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "';'", "'['", "']'", "','", 
                     "'='", "'('", "')'", "'?'", "'!'", "'-->'", "'<->'", 
                     "'*'", "':'", "'map'", "'room'", "'passage'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "GRAPH", "NODE", "EDGE", "NUMBER", "STRING", "ID", 
                      "COMMENT", "LINE_COMMENT", "WS" ]

    RULE_parse = 0
    RULE_graph = 1
    RULE_stmt_list = 2
    RULE_stmt = 3
    RULE_attr_stmt = 4
    RULE_attr_list = 5
    RULE_a_list = 6
    RULE_attr = 7
    RULE_tuple_ = 8
    RULE_edge_stmt = 9
    RULE_edgeRHS = 10
    RULE_unknown = 11
    RULE_dark_unknown = 12
    RULE_edgeop = 13
    RULE_node_stmt = 14
    RULE_node_id = 15
    RULE_node_id_left = 16
    RULE_node_id_right = 17
    RULE_special = 18
    RULE_port_left = 19
    RULE_port_right = 20
    RULE_id_ = 21

    ruleNames =  [ "parse", "graph", "stmt_list", "stmt", "attr_stmt", "attr_list", 
                   "a_list", "attr", "tuple_", "edge_stmt", "edgeRHS", "unknown", 
                   "dark_unknown", "edgeop", "node_stmt", "node_id", "node_id_left", 
                   "node_id_right", "special", "port_left", "port_right", 
                   "id_" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    GRAPH=16
    NODE=17
    EDGE=18
    NUMBER=19
    STRING=20
    ID=21
    COMMENT=22
    LINE_COMMENT=23
    WS=24

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ParseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def graph(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(zmapParser.GraphContext)
            else:
                return self.getTypedRuleContext(zmapParser.GraphContext,i)


        def getRuleIndex(self):
            return zmapParser.RULE_parse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParse" ):
                listener.enterParse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParse" ):
                listener.exitParse(self)




    def parse(self):

        localctx = zmapParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 44
                self.graph()
                self.state = 47 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 3670016) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GraphContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self):
            return self.getTypedRuleContext(zmapParser.Id_Context,0)


        def stmt_list(self):
            return self.getTypedRuleContext(zmapParser.Stmt_listContext,0)


        def getRuleIndex(self):
            return zmapParser.RULE_graph

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGraph" ):
                listener.enterGraph(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGraph" ):
                listener.exitGraph(self)




    def graph(self):

        localctx = zmapParser.GraphContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_graph)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.id_()
            self.state = 50
            self.match(zmapParser.T__0)
            self.state = 51
            self.stmt_list()
            self.state = 52
            self.match(zmapParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(zmapParser.StmtContext)
            else:
                return self.getTypedRuleContext(zmapParser.StmtContext,i)


        def getRuleIndex(self):
            return zmapParser.RULE_stmt_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt_list" ):
                listener.enterStmt_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt_list" ):
                listener.exitStmt_list(self)




    def stmt_list(self):

        localctx = zmapParser.Stmt_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4128768) != 0):
                self.state = 54
                self.stmt()
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==3:
                    self.state = 55
                    self.match(zmapParser.T__2)


                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def node_stmt(self):
            return self.getTypedRuleContext(zmapParser.Node_stmtContext,0)


        def edge_stmt(self):
            return self.getTypedRuleContext(zmapParser.Edge_stmtContext,0)


        def attr_stmt(self):
            return self.getTypedRuleContext(zmapParser.Attr_stmtContext,0)


        def getRuleIndex(self):
            return zmapParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = zmapParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stmt)
        try:
            self.state = 66
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.node_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.edge_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 65
                self.attr_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attr_list(self):
            return self.getTypedRuleContext(zmapParser.Attr_listContext,0)


        def GRAPH(self):
            return self.getToken(zmapParser.GRAPH, 0)

        def NODE(self):
            return self.getToken(zmapParser.NODE, 0)

        def EDGE(self):
            return self.getToken(zmapParser.EDGE, 0)

        def getRuleIndex(self):
            return zmapParser.RULE_attr_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttr_stmt" ):
                listener.enterAttr_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttr_stmt" ):
                listener.exitAttr_stmt(self)




    def attr_stmt(self):

        localctx = zmapParser.Attr_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_attr_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 458752) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 69
            self.attr_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def a_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(zmapParser.A_listContext)
            else:
                return self.getTypedRuleContext(zmapParser.A_listContext,i)


        def getRuleIndex(self):
            return zmapParser.RULE_attr_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttr_list" ):
                listener.enterAttr_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttr_list" ):
                listener.exitAttr_list(self)




    def attr_list(self):

        localctx = zmapParser.Attr_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attr_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 71
                self.match(zmapParser.T__3)
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 3670016) != 0):
                    self.state = 72
                    self.a_list()


                self.state = 75
                self.match(zmapParser.T__4)
                self.state = 78 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==4):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class A_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(zmapParser.AttrContext)
            else:
                return self.getTypedRuleContext(zmapParser.AttrContext,i)


        def getRuleIndex(self):
            return zmapParser.RULE_a_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterA_list" ):
                listener.enterA_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitA_list" ):
                listener.exitA_list(self)




    def a_list(self):

        localctx = zmapParser.A_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_a_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 80
                    self.attr()
                    self.state = 82
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==6:
                        self.state = 81
                        self.match(zmapParser.T__5)

             
                self.state = 88
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

            self.state = 89
            self.attr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(zmapParser.Id_Context)
            else:
                return self.getTypedRuleContext(zmapParser.Id_Context,i)


        def tuple_(self):
            return self.getTypedRuleContext(zmapParser.Tuple_Context,0)


        def getRuleIndex(self):
            return zmapParser.RULE_attr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttr" ):
                listener.enterAttr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttr" ):
                listener.exitAttr(self)




    def attr(self):

        localctx = zmapParser.AttrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_attr)
        self._la = 0 # Token type
        try:
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.id_()
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==7:
                    self.state = 92
                    self.match(zmapParser.T__6)
                    self.state = 93
                    self.id_()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.id_()
                self.state = 97
                self.match(zmapParser.T__6)
                self.state = 98
                self.tuple_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tuple_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(zmapParser.Id_Context)
            else:
                return self.getTypedRuleContext(zmapParser.Id_Context,i)


        def getRuleIndex(self):
            return zmapParser.RULE_tuple_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTuple_" ):
                listener.enterTuple_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTuple_" ):
                listener.exitTuple_(self)




    def tuple_(self):

        localctx = zmapParser.Tuple_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_tuple_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(zmapParser.T__7)
            self.state = 103
            self.id_()
            self.state = 104
            self.match(zmapParser.T__5)
            self.state = 105
            self.id_()
            self.state = 106
            self.match(zmapParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Edge_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def edgeRHS(self):
            return self.getTypedRuleContext(zmapParser.EdgeRHSContext,0)


        def node_id_left(self):
            return self.getTypedRuleContext(zmapParser.Node_id_leftContext,0)


        def attr_list(self):
            return self.getTypedRuleContext(zmapParser.Attr_listContext,0)


        def getRuleIndex(self):
            return zmapParser.RULE_edge_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEdge_stmt" ):
                listener.enterEdge_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEdge_stmt" ):
                listener.exitEdge_stmt(self)




    def edge_stmt(self):

        localctx = zmapParser.Edge_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_edge_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.node_id_left()
            self.state = 109
            self.edgeRHS()
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 110
                self.attr_list()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EdgeRHSContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def edgeop(self):
            return self.getTypedRuleContext(zmapParser.EdgeopContext,0)


        def node_id_right(self):
            return self.getTypedRuleContext(zmapParser.Node_id_rightContext,0)


        def unknown(self):
            return self.getTypedRuleContext(zmapParser.UnknownContext,0)


        def dark_unknown(self):
            return self.getTypedRuleContext(zmapParser.Dark_unknownContext,0)


        def getRuleIndex(self):
            return zmapParser.RULE_edgeRHS

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEdgeRHS" ):
                listener.enterEdgeRHS(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEdgeRHS" ):
                listener.exitEdgeRHS(self)




    def edgeRHS(self):

        localctx = zmapParser.EdgeRHSContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_edgeRHS)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.edgeop()
            self.state = 117
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19, 20, 21]:
                self.state = 114
                self.node_id_right()
                pass
            elif token in [10]:
                self.state = 115
                self.unknown()
                pass
            elif token in [11]:
                self.state = 116
                self.dark_unknown()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnknownContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return zmapParser.RULE_unknown

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnknown" ):
                listener.enterUnknown(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnknown" ):
                listener.exitUnknown(self)




    def unknown(self):

        localctx = zmapParser.UnknownContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_unknown)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(zmapParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Dark_unknownContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return zmapParser.RULE_dark_unknown

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDark_unknown" ):
                listener.enterDark_unknown(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDark_unknown" ):
                listener.exitDark_unknown(self)




    def dark_unknown(self):

        localctx = zmapParser.Dark_unknownContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_dark_unknown)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(zmapParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EdgeopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return zmapParser.RULE_edgeop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEdgeop" ):
                listener.enterEdgeop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEdgeop" ):
                listener.exitEdgeop(self)




    def edgeop(self):

        localctx = zmapParser.EdgeopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_edgeop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            _la = self._input.LA(1)
            if not(_la==12 or _la==13):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Node_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def node_id(self):
            return self.getTypedRuleContext(zmapParser.Node_idContext,0)


        def attr_list(self):
            return self.getTypedRuleContext(zmapParser.Attr_listContext,0)


        def getRuleIndex(self):
            return zmapParser.RULE_node_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNode_stmt" ):
                listener.enterNode_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNode_stmt" ):
                listener.exitNode_stmt(self)




    def node_stmt(self):

        localctx = zmapParser.Node_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_node_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.node_id()
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 126
                self.attr_list()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Node_idContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self):
            return self.getTypedRuleContext(zmapParser.Id_Context,0)


        def special(self):
            return self.getTypedRuleContext(zmapParser.SpecialContext,0)


        def getRuleIndex(self):
            return zmapParser.RULE_node_id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNode_id" ):
                listener.enterNode_id(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNode_id" ):
                listener.exitNode_id(self)




    def node_id(self):

        localctx = zmapParser.Node_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_node_id)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.id_()
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 130
                self.special()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Node_id_leftContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self):
            return self.getTypedRuleContext(zmapParser.Id_Context,0)


        def port_left(self):
            return self.getTypedRuleContext(zmapParser.Port_leftContext,0)


        def getRuleIndex(self):
            return zmapParser.RULE_node_id_left

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNode_id_left" ):
                listener.enterNode_id_left(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNode_id_left" ):
                listener.exitNode_id_left(self)




    def node_id_left(self):

        localctx = zmapParser.Node_id_leftContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_node_id_left)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.id_()
            self.state = 134
            self.port_left()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Node_id_rightContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self):
            return self.getTypedRuleContext(zmapParser.Id_Context,0)


        def port_right(self):
            return self.getTypedRuleContext(zmapParser.Port_rightContext,0)


        def special(self):
            return self.getTypedRuleContext(zmapParser.SpecialContext,0)


        def getRuleIndex(self):
            return zmapParser.RULE_node_id_right

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNode_id_right" ):
                listener.enterNode_id_right(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNode_id_right" ):
                listener.exitNode_id_right(self)




    def node_id_right(self):

        localctx = zmapParser.Node_id_rightContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_node_id_right)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 136
                self.port_right()


            self.state = 139
            self.id_()
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 140
                self.special()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SpecialContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return zmapParser.RULE_special

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpecial" ):
                listener.enterSpecial(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpecial" ):
                listener.exitSpecial(self)




    def special(self):
